--- a/covid19IndiaTracker/src/app/components/homepage/homepage.component.html
+++ b/covid19IndiaTracker/src/app/components/homepage/homepage.component.html
@@ -7,5 +7,8 @@
         <app-statetable></app-statetable>
     </div>
 </div>
+<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+    <app-charts></app-charts>
+</div>
 
 
